src/app/header/header.component.scss
@import '~@angular/material/theming';

.header {
  @include mat-elevation(1);
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;

  &__meal {
    position: absolute;
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    justify-items: center;
    z-index: 20;

    @media screen and (min-width: 750px) {
      gap: 32px;
      height: 64px;
      grid-template-rows: 64px;
    }
  }

  &__wrap {
    display: flex;
  }
}

.title {
  position: absolute;
  justify-self: center;
  text-align: center;
  font-weight: normal;
  cursor: text;
  z-index: 30;

  &--date {
    cursor: pointer;
  }
}

.other-title {
  font-size: 15px;
  font-weight: normal;
  cursor: pointer;

  @media screen and (min-width: 750px) {
    font-size: 18px;
    justify-self: end;
  }
}

::ng-deep .datepicker {
  position: absolute;
  background: #ffff;
  top: 64px;
  left: 35vw;
  @include mat-elevation(1);

  @media screen and (max-width: 750px) {
    left: 10vw;
  }
}

.mypage {
  justify-self: end;
}

.avatar-image {
  border-radius: 50%;
  width: 40px;
  background: center/cover;
}

.navs {
  margin-right: 16px;

  @media screen and (max-width: 750px) {
    display: none;
  }
}

.meal {
  font-size: 15px;

  @media screen and (min-width: 750px) {
    justify-self: start;
  }
}

button.mat-menu-item {
  width: 100%;
  margin: 0;
}

.logo {
  margin: 0;
  justify-self: start;
  outline: none;
  cursor: pointer;

  &__image {
    height: 48px;
    vertical-align: middle;
  }
}

